<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.forms.ExpenseForm">

    <!-- AppBar -->
    <include
        layout="@layout/appbar_for_children"
        android:id="@+id/page_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- ScrollView untuk form -->
    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_below="@id/page_appbar"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expense_form"
                android:fontFamily="@font/poppins"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expense_form_desc"
                android:fontFamily="@font/poppins_light"
                android:textSize="12sp" />

            <!-- Field Title -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Field Amount -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/spinnerExpenseCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.5"
                    layout="@layout/component_spinner" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/expenseRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                layout="@layout/component_rating_bar" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark_purple"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>